tests/snapshots/integration__integration_tests__help__help_config_state_show.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - state
    - show
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config state show - Show all cached state

Usage: [1m[36mwt config state show[0m [36m[OPTIONS]

[1m[32mOptions:
      [1m[36m--format[0m[36m [0m[36m<FORMAT>
          Output format (table, json)
          
          [default: table]

  [1m[36m-h[0m, [1m[36m--help
          Print help (see a summary with '-h')

[1m[32mGlobal Options:
  [1m[36m-C[0m[36m [0m[36m<path>
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose
          Show commands and debug info

Shows all cached state including:

- [1mDefault branch[0m: Cached result of querying remote for default branch
- [1mSwitch history[0m: Previous branch for [2mwt switch -
- [1mBranch markers[0m: User-defined branch notes
- [1mCI status[0m: Cached GitHub/GitLab CI status per branch (30s TTL)
- [1mLog files[0m: Background operation logs

CI cache entries show status, age, and the commit SHA they were fetched for.
