tests/snapshots/integration__integration_tests__help__help_config_var_clear.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - var
    - clear
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config var clear - Clear a variable value

Usage: [1m[36mwt config var clear[0m [36m[OPTIONS][0m [36m<KEY>[0m

[1m[32mArguments:[0m
  [36m<KEY>[0m
          Variable: 'marker'
          
          [possible values: marker]

[1m[32mOptions:[0m
      [1m[36m--branch[0m[36m [0m[36m<BRANCH>[0m
          Target branch (defaults to current)

      [1m[36m--all[0m
          Clear all values

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

Variables:

- [1mmarker[0m: Custom status marker for a branch

[32mExamples[0m

Clear marker for current branch:
  [2mwt config var clear marker[0m

Clear marker for a specific branch:
  [2mwt config var clear marker --branch=feature[0m

Clear all markers:
  [2mwt config var clear marker --all[0m
