tests/snapshots/integration__integration_tests__help__help_config_var_get.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - config
    - var
    - get
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_EDITOR: ""
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
wt config var get - Get a variable value

Usage: [1m[36mwt config var get[0m [36m[OPTIONS][0m [36m<KEY>[0m

[1m[32mArguments:[0m
  [36m<KEY>[0m
          Variable: 'default-branch', 'marker', or 'ci-status'
          
          [possible values: default-branch, marker, ci-status]

[1m[32mOptions:[0m
      [1m[36m--refresh[0m
          Force refresh (for cached variables)

      [1m[36m--branch[0m[36m [0m[36m<BRANCH>[0m
          Target branch (for branch-scoped variables)

  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m
          Show commands and debug info

Variables:

- [1mdefault-branch[0m: The repository's default branch (main, master, etc.)
- [1mmarker[0m: Custom status marker for a branch (shown in [2mwt list[0m)
- [1mci-status[0m: CI/PR status for a branch (passed, running, failed, conflicts, noci)

[32mExamples[0m

Get the default branch:
  [2mwt config var get default-branch[0m

Force refresh from remote:
  [2mwt config var get default-branch --refresh[0m

Get marker for current branch:
  [2mwt config var get marker[0m

Get marker for a specific branch:
  [2mwt config var get marker --branch=feature[0m

Get CI status for current branch:
  [2mwt config var get ci-status[0m

Force refresh CI status (bypass cache):
  [2mwt config var get ci-status --refresh[0m
