tests/snapshots/integration__integration_tests__help__help_hook_approvals.snap
---
source: tests/integration_tests/help.rs
info:
  program: wt
  args:
    - hook
    - approvals
    - "--help"
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "500"
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    NO_COLOR: ""
    PSModulePath: ""
    RUST_LOG: warn
    SHELL: ""
    TERM: alacritty
    WORKTRUNK_APPROVALS_PATH: /nonexistent/test/approvals.toml
    WORKTRUNK_CONFIG_PATH: /nonexistent/test/config.toml
    WORKTRUNK_SYSTEM_CONFIG_PATH: /etc/xdg/worktrunk/config.toml
    WORKTRUNK_TEST_CLAUDE_INSTALLED: "0"
    WORKTRUNK_TEST_DELAYED_STREAM_MS: "-1"
    WORKTRUNK_TEST_EPOCH: "1735776000"
    WORKTRUNK_TEST_NUSHELL_ENV: "0"
    WORKTRUNK_TEST_OPENCODE_INSTALLED: "0"
    WORKTRUNK_TEST_POWERSHELL_ENV: "0"
    WORKTRUNK_TEST_SKIP_URL_HEALTH_CHECK: "1"
---
success: true
exit_code: 0
----- stdout -----
wt hook approvals - Manage command approvals

Usage: [1m[36mwt hook approvals[0m [36m[OPTIONS][0m [36m<COMMAND>[0m

[1m[32mCommands:[0m
  [1m[36madd[0m    Store approvals in approvals.toml
  [1m[36mclear[0m  Clear approved commands from approvals.toml

[1m[32mOptions:[0m
  [1m[36m-h[0m, [1m[36m--help[0m
          Print help (see a summary with '-h')

[1m[32mGlobal Options:[0m
  [1m[36m-C[0m[36m [0m[36m<path>[0m
          Working directory for this command

      [1m[36m--config[0m[36m [0m[36m<path>[0m
          User config file path

  [1m[36m-v[0m, [1m[36m--verbose[0m[36m...[0m
          Verbose output (-v: info logs + hook/template output; -vv: debug logs + diagnostic report + trace.log/output.log under .git/wt/logs/)

Project hooks require approval on first run to prevent untrusted projects from running arbitrary commands.

[1m[32mExamples[0m

Pre-approve all commands for current project:
[107m [0m [2m[0m[2m[34mwt[0m[2m hook approvals add[0m

Clear approvals for current project:
[107m [0m [2m[0m[2m[34mwt[0m[2m hook approvals clear[0m

Clear global approvals:
[107m [0m [2m[0m[2m[34mwt[0m[2m hook approvals clear [0m[2m[36m--global[0m[2m[0m

[1m[32mHow approvals work[0m

Approved commands are saved to [2m~/.config/worktrunk/approvals.toml[0m. Re-approval is required when the command template changes or the project moves. Use [2m--yes[0m to bypass prompts in CI.

----- stderr -----
